updating PoTAcc integration guideline for SECDA-TFLite v2 release.

--- a/vm_shift_accelerator/vm_shift_delegate/v2/accelerator/BUILD
+++ b/vm_shift_accelerator/vm_shift_delegate/v2/accelerator/BUILD
@@ -15,28 +15,19 @@ config_setting(
     visibility=["//visibility:public"],
 )
 
+
 common_copts = ["-Wall"] + tflite_copts()
 
 cc_library(
-    name="accelerator_config",
-    srcs=[
+    name = "accelerator",
+    srcs = [
         "acc_config.sc.h",
-    ],
-    copts=common_copts,
-    deps=select({
-        ":linux_armhf": [],
-        "//conditions:default": ["@systemc//:systemc"],
+    ] + select({
+        "@secda_tools//:sysc": ["acc.sc.cc"],
+        "//conditions:default": [],
     }),
-)
-
-
-cc_library(
-    name="accelerator",
-    srcs=[
-        "acc.sc.cc",
-    ],
-    hdrs=[
-        # "acc_config.sc.h",
+    hdrs = select({
+        "@secda_tools//:sysc": [
         "acc.sc.h",
         "in.sc.h",
         "data_in.sc.h",
@@ -48,10 +39,9 @@ cc_library(
         "write_sync.sc.h",
         "out.sc.h",
         "counter.sc.h",
-    ],
-    copts=common_copts,
-    deps=[
-        ":accelerator_config",
-        "//tensorflow/lite/delegates/utils/secda_tflite:secda_tflite_sim",
-    ],
+        ],
+        "//conditions:default": [],
+    }),
+    copts = common_copts,
+    deps = ["//third_party:secdav5"],
 )
