--- a/mm_acclerator/vm_shift_delegate/v4/BUILD
+++ b/mm_acclerator/vm_shift_delegate/v4/BUILD
@@ -14,25 +14,33 @@ config_setting(
     visibility = ["//visibility:public"],
 )
 
+config_setting(
+    name = "linux_aarch64",
+    values = {"cpu": "aarch64"},
+    visibility = ["//visibility:public"],
+)
+
 cc_library(
-    name = "vm_shift_delegate",
-    srcs = [
+    name="vm_shift_delegate",
+    srcs=[
         "vm_shift_delegate.cc",
     ],
-    hdrs = [
+    hdrs=[
         "vm_shift_delegate.h",
         "util.h",
     ],
-    deps = [
+    deps=[
         "//tensorflow/lite/c:common",
         "//tensorflow/lite/delegates/utils:simple_delegate",
         "//tensorflow/lite/kernels:padding",
         "//tensorflow/lite/kernels:kernel_util",
-        "//tensorflow/lite/kernels/internal:types"
-    ] + select({
-        ":linux_armhf": ["//tensorflow/lite/delegates/utils/secda_delegates/vm_shift_delegate/v4/accelerator/driver:driver"],
-        "//conditions:default": ["//tensorflow/lite/delegates/utils/secda_delegates/vm_shift_delegate/v4/accelerator/driver:driver_sysc"],
-    }),
+        "//tensorflow/lite/kernels/internal:types",
+        "//tensorflow/lite/kernels/internal:tensor",
+        "//tensorflow/lite/kernels/internal:common",
+        "//tensorflow/lite/kernels/internal:optimized_base",
+        "//tensorflow/lite/kernels/internal:optimized_4bit",
+        "//tensorflow/lite/delegates/utils/secda_delegates/vm_shift_delegate/v4/accelerator/driver:vm_shift_driver",
+    ]
 )
 
 
