--- a/mm_acclerator/vm_shift_delegate/v4/accelerator/BUILD
+++ b/mm_acclerator/vm_shift_delegate/v4/accelerator/BUILD
@@ -15,35 +15,25 @@ config_setting(
     visibility = ["//visibility:public"],
 )
 
+
 common_copts = ["-Wall"] + tflite_copts()
-
-cc_library(
-    name = "accelerator_config",
-    srcs = [
-        "acc_config.sc.h",
-        ],
-    copts = common_copts,
-    deps = select({
-        ":linux_armhf": [],
-        "//conditions:default": ["@systemc//:systemc"],
-    }),
-)
-
 
 cc_library(
     name = "accelerator",
     srcs = [
-        "acc.sc.cc",
-        ],
-    hdrs = [
-        # "acc_config.sc.h",
+        "acc_config.sc.h",
+    ] + select({
+        "@secda_tools//:sysc": ["acc.sc.cc"],
+        "//conditions:default": [],
+    }),
+    hdrs = select({
+        "@secda_tools//:sysc": [
         "acc.sc.h",
         "in.sc.h",
-    ],
+        ],
+        "//conditions:default": [],
+    }),
     copts = common_copts,
-    deps = [
-        ":accelerator_config",
-        "//tensorflow/lite/delegates/utils/secda_tflite:secda_tflite_sim",
-    ],
+    deps = ["//third_party:secdav5"],
 )
 
