--- a/mm_acclerator/vm_shift_delegate/v4/accelerator/driver/BUILD
+++ b/mm_acclerator/vm_shift_delegate/v4/accelerator/driver/BUILD
@@ -12,31 +12,15 @@ package(
 common_copts = ["-Wall"] + tflite_copts()
 
 cc_library(
-    name = "driver_sysc",
+    name = "vm_shift_driver",
     srcs = [
+        "systemc_binding.h",
         "acc_container.h",
         "gemm_driver.h",
-        "systemc_binding.h"
-        ],
-    copts = common_copts,
-    deps = [
-        "@systemc//:systemc",
-        "//tensorflow/lite/delegates/utils/secda_delegates/vm_shift_delegate/v4/accelerator:accelerator",
-        "//tensorflow/lite/delegates/utils/secda_tflite:secda_tflite_sim",
     ],
-)
-
-
-cc_library(
-    name = "driver",
-    srcs = [
-        "acc_container.h",
-        "gemm_driver.h",
-        ],
     copts = common_copts,
     deps = [
-        "//tensorflow/lite/delegates/utils/secda_delegates/vm_shift_delegate/v4/accelerator:accelerator_config",
-        "//tensorflow/lite/delegates/utils/secda_tflite:secda_tflite",
+        "//tensorflow/lite/delegates/utils/secda_delegates/vm_shift_delegate/v4/accelerator:accelerator",
     ],
 )
 
